fix form flicker

--- a/src/pages/contact/index.css
+++ b/src/pages/contact/index.css
@@ -116,7 +116,6 @@ input::-webkit-validation-bubble-message {
 }
 
 #contact_header {
-    transform: translateY(0) scaleY(1);
     transition: transform 0.75s cubic-bezier(0.4, 0, 0.2, 1) 0.25s;
 }
 
